--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "kind-of": "^6.0.3",
-    "node-forge": "^0.10.0"
+    "node-forge": "^0.10.0",
+    "npm": "^7.10.0"
   }
 }
